--- a/breder.generic.email/.classpath
+++ b/breder.generic.email/.classpath
@@ -2,16 +2,13 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry kind="lib" path="lib/axis.jar"/>
-	<classpathentry kind="lib" path="lib/gdata-client-1.0.jar"/>
-	<classpathentry kind="lib" path="lib/gdata-contacts-3.0.jar"/>
-	<classpathentry kind="lib" path="lib/gdata-core-1.0.jar"/>
-	<classpathentry kind="lib" path="lib/google-collect-1.0-rc1.jar"/>
-	<classpathentry kind="lib" path="lib/imap.jar"/>
-	<classpathentry kind="lib" path="lib/mailapi.jar"/>
-	<classpathentry kind="lib" path="lib/smtp.jar"/>
-	<classpathentry kind="lib" path="lib/pop3.jar"/>
-	<classpathentry kind="lib" path="lib/seaglasslookandfeel-0.1.7.3.jar"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/breder.dtl.swing"/>
+	<classpathentry kind="lib" path="lib/dsn-1.6.1.jar"/>
+	<classpathentry kind="lib" path="lib/imap-1.6.1.jar"/>
+	<classpathentry kind="lib" path="lib/javax.mail-api-1.6.1.jar"/>
+	<classpathentry kind="lib" path="lib/javax.mail.jar"/>
+	<classpathentry kind="lib" path="lib/mailapi-1.6.1.jar"/>
+	<classpathentry kind="lib" path="lib/pop3-1.6.1.jar"/>
+	<classpathentry kind="lib" path="lib/smtp-1.6.1.jar"/>
+	<classpathentry kind="lib" path="lib/dnsjava-2.1.7.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
