--- a/server/log.conf
+++ b/server/log.conf
@@ -13,7 +13,7 @@
 # Determines the logging threshold to use if log4j is not enabled.
 # if log4j is enabled, refer to the settings below.
 # Valid values are: debug, info, warn, error, and fatal.
-defaultthreshold=info
+defaultthreshold=debug
 
 #####################################################################
 # Log4j Settings
@@ -33,7 +33,7 @@ defaultthreshold=info
 # Console (Standard Out) Appender
 # Default logger, writes log messages to the console output
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.appender.stdout.threshold=warn
+log4j.appender.stdout.threshold=fine
 
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{ISO8601} - [%t] %C{1} - %m%n
@@ -44,7 +44,7 @@ log4j.appender.file=org.apache.log4j.RollingFileAppender
 log4j.appender.file.File=../jes.log
 log4j.appender.file.MaxFileSize=10KB
 log4j.appender.file.MaxBackupIndex=5
-log4j.appender.file.threshold=info
+log4j.appender.file.threshold=fine
 
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%d{ISO8601} - [%t] %C{1} - %m%n
