--- a/server/pom.xml
+++ b/server/pom.xml
@@ -60,11 +60,11 @@
 			<groupId>com.sun.mail</groupId>
 			<artifactId>smtp</artifactId>
 			<version>1.6.1</version>
-		</dependency>
-		<dependency>
-			<groupId>com.sun.mail</groupId>
-			<artifactId>dsn</artifactId>
-			<version>1.6.1</version>
-		</dependency>
-	</dependencies>
+		</dependency><!-- 
+	<dependency>
+		<groupId>com.sun.mail</groupId>
+		<artifactId>dsn</artifactId>
+		<version>1.6.1</version>
+	</dependency>
+ -->	</dependencies>
 </project>
